<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ellie Rides</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">1</string>
    <string name="title_section2">2</string>
    <string name="title_section3">3</string>
    <string name="dialog_resume_restart">Would You Like To Resume where you left off ?</string>
    <string name="resume">Resume</string>
    <string name="start_over">Start Over</string>
    <string name="helvetica">helvetica.ttf</string>
    <string name="mysteryquest">mysteryquest_regular.ttf</string>
    <string name="page">page:</string>
    <string name="config">values</string>
    <string name="title_activity_parent">Info For Parents</string>
    <string name="readByMyself">Read By Myself</string>
    <string name="continueFromPage">Continue From Page</string>
    <string name="readToMe">Read To Me</string>
    <string name="autoPlay">Auto Play</string>
    <string name="forParents">For Parents</string>
</resources>
