<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/cover_layout"
    android:background="@color/green"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readByMyselfButton"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/small_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/readByMyself"
        android:background="@drawable/read_by_myself" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size"
        android:id="@+id/page"
        android:layout_width="wrap_content" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:progress="10"
        android:secondaryProgress="10"
        android:max="24"
        android:contentDescription="@string/continueFromPage"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readToMeButton"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/small_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/readToMe"
        android:background="@drawable/read_to_me" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoPlayButton"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/small_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/autoPlay"
        android:background="@drawable/autoplay_button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parentButton"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/small_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/forParents"
        android:background="@drawable/parent_button" />
</LinearLayout>

